# GasCore-UI

./: .gitignore  CMakeLists.txt  readme.md  todo.txt
src/cpp/demo/: demo.cpp
src/cpp/main/gas/: App.cpp  App.hpp  Canvas.hpp  PaintTool.hpp  TextView.cpp  TextView.hpp  View.cpp  View.hpp  ViewGroup.cpp  ViewGroup.hpp  Window.cpp  Window.hpp
src/cpp/main/gas/impl/: AppImpl.cpp  AppImpl.hpp  WindowImpl.cpp  WindowImpl.hpp  WindowsAppImpl.cpp  WindowsCanvas.cpp  WindowsCanvas.hpp  WindowsWindowImpl.cpp  WindowsWindowImpl.hpp
src/cpp/main/gas/ui/: Canvas.cpp  Canvas.hpp  Point.hpp  RectangleView.cpp  RectangleView.hpp  TextView.cpp  TextView.hpp  UITypes.hpp  View.cpp  View.hpp  ViewGroup.cpp  ViewGroup.hpp  Window.cpp  Window.hpp
src/cpp/main/gas/ui/impl/: AppImpl.cpp  AppImpl.hpp  WindowImpl.cpp  WindowImpl.hpp  WindowsAppImpl.cpp  WindowsAppImpl.hpp  WindowsCanvas.cpp  WindowsCanvas.hpp  WindowsWindowImpl.cpp  WindowsWindowImpl.hpp
src/cpp/test/: UITypesTestCase.cpp  UITypesTestCase.hpp  ViewsTestCase.cpp  ViewsTestCase.hpp  test.cpp
